--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -17,3 +17,5 @@ Suggests:
 Config/testthat/edition: 3
 Imports: 
     stats
+URL: https://github.com/canyi-chen/ctima
+BugReports: https://github.com/canyi-chen/ctima/issues
