--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -4,8 +4,7 @@ Version: 0.0.0.9000
 Authors@R: 
     c(person("Canyi", "Chen", , "cychen.stats@outlook.com", role = c("aut", "cre"),
            comment = c(ORCID = "0000-0002-0673-5812")),
-           person("Yinqiu", "He", role = c("aut")),
-           person("Gongjun", "Xu", role = c("aut")),
+           person("Ling", "Zhou", role = c("aut")),
     person("Peter X.-K.", "Song", , role = c("aut", "cph")))
 Description: Assess whether and how a specific continuous or categorical exposure affects the outcome of interest through one mediator using a two-way cross test (CT). The CT method allows to make inference for composite null hypotheses of no mediation effect, providing valid type I error control and thus optimizes statistical power. For more technical details, refer to Chen, C., Zhou, L., Song, P.X.K. (2025), "An Efficient Two-Way Cross Test for Mediation Effects with High Sensitivity to Weak Signals" arXiv preprint.
 License: MIT + file LICENSE
